feat: 메인페이지1 이미지 및 제목 구현

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,30 @@
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
   --font-hans: var(--font-black-han-sans);
+  --animate-flicker: flicker 4s linear both;
+}
+
+@keyframes flicker {
+  0% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  10%,
+  30%,
+  50%,
+  70%,
+  90%,
+  100% {
+    opacity: 1;
+    text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+  }
+  20%,
+  40%,
+  60%,
+  80% {
+    opacity: 0;
+    text-shadow: none;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
