--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,8 +12,8 @@
   --font-mono: var(--font-geist-mono);
   --font-hans: var(--font-black-han-sans);
   --animate-flicker: flicker 4s infinite both;
-  --animate-slide-to-left: slide-to-left 0.5s
-    cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  --animate-slide-to-left: slide-to-left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+    both;
   --animate-airplane-moving: airplane-moving 2.5s both;
 }
 
