--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,8 @@
   --color-primary-400: #ff9933;
 
   /* 그림자 */
-  --shadow-custom-shadow: 0 0px 10px -2px rgba(0, 0, 0, 0.2);
+  --shadow-custom-sm: 0 0px 10px -2px rgba(0, 0, 0, 0.2);
+  --shadow-custom-md: 0 0px 10px -2px rgba(0, 0, 0, 0.5);
 
   /* 폰트 */
   --font-sans: var(--font-geist-sans);
@@ -29,6 +30,8 @@
   --animate-slide-to-left: slide-to-left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94)
     both;
   --animate-airplane-moving: airplane-moving 2.5s both;
+  --animate-scale-in-center: scale-in-center 0.5s
+    cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
 
 .clip-custom-polygon-right {
@@ -84,6 +87,17 @@
   }
   100% {
     transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes scale-in-center {
+  0% {
+    transform: scale(0);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
     opacity: 1;
   }
 }
