--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,8 +30,7 @@
   --animate-slide-to-left: slide-to-left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94)
     both;
   --animate-airplane-moving: airplane-moving 2.5s both;
-  --animate-scale-in-center: scale-in-center 0.5s
-    cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  --animate-wobble-hor-bottom: wobble-hor-bottom 0.8s both;
 }
 
 .clip-custom-polygon-right {
@@ -91,14 +90,26 @@
   }
 }
 
-@keyframes scale-in-center {
-  0% {
-    transform: scale(0);
-    opacity: 1;
-  }
+@keyframes wobble-hor-bottom {
+  0%,
   100% {
-    transform: scale(1);
-    opacity: 1;
+    transform: translateX(0%);
+    transform-origin: 50% 50%;
+  }
+  15% {
+    transform: translateX(-20px) rotate(-6deg);
+  }
+  30% {
+    transform: translateX(10px) rotate(6deg);
+  }
+  45% {
+    transform: translateX(-10px) rotate(-3.6deg);
+  }
+  60% {
+    transform: translateX(7px) rotate(2.4deg);
+  }
+  75% {
+    transform: translateX(-5px) rotate(-1.2deg);
   }
 }
 
