--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-primary: #ff8000;
+  --color-primary-50: #fff7ee;
   --color-primary-100: #ffe5cc;
   --color-primary-200: #ffcc99;
   --color-primary-300: #ffb266;
