--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,6 +32,10 @@
     both;
   --animate-airplane-moving: airplane-moving 2.5s both;
   --animate-wobble-hor-bottom: wobble-hor-bottom 0.8s both;
+  --animate-scale-in: scale-in-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+    both;
+  --animate-scale-out: scale-out-top 0.5s cubic-bezier(0.55, 0.085, 0.68, 0.53)
+    both;
 }
 
 .clip-custom-polygon-right {
@@ -111,6 +115,32 @@
   }
   75% {
     transform: translateX(-5px) rotate(-1.2deg);
+  }
+}
+
+@keyframes scale-in-top {
+  0% {
+    transform: scale(0);
+    transform-origin: 50% 0%;
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    transform-origin: 50% 0%;
+    opacity: 1;
+  }
+}
+
+@keyframes scale-out-top {
+  0% {
+    transform: scale(1);
+    transform-origin: 50% 0%;
+    opacity: 1;
+  }
+  100% {
+    transform: scale(0);
+    transform-origin: 50% 0%;
+    opacity: 1;
   }
 }
 
